--- a/Radiation/IntroRad.tex
+++ b/Radiation/IntroRad.tex
@@ -29,9 +29,8 @@ Additionaly, the measurements outside of the structure will give information as 
 	
 A newer type of organic-inorganic blend solar cell which has gained a lot  attention is the perovskite solar cell (PSC). This solar cell has a novel active layer comprised of organometallic molecules which exhibit the perovskite crystal structure ABX3. The most commonly used perovskite material is methylamoniumm lead trihalide (CH3NH3PbX3, MAPX), where lead can be swapped for tin, and halides such as boron, iodine, and chlorine are employed. Fabrication of the perovskite solar cell is highly attractive as it can be accomplished with wet chemistry, roll to roll printing, or vapor deposition. Some key features of the perovskite structure is that the bandgap of the material is tunable via the halide content and that the diffusion length of holes and electrons is ~1 micron, making them perfect for roll to roll thin film printing. The Shockley–Queisser limit is about 31 percent under an AM1.5G solar spectrum at 1000W/m2, for a Perovskite bandgap of 1.55 eV, which is near the theoretical maximum of 33.7 percent, and reports of perovskite cells with PCE as high as 22 percent have already been fabricated. As a newer material there is still much unknown about the physics of the perovskite solar cell, such as if charges occur as bound excitons or free charges.
 
-INCLUDE PARAGRAPH COVERING A-SILICON CELLS
-
-	Space transport involves high doses of radiation, large fluctuations of temperatures, and extreme vacuum conditions. The need to study the effects of a space like environment on organic electronic devices is paramount as advances in the organic semiconductor field continue and space exploration becomes more standard. In this study, we propose to mount four different types of solar cells onto our payload and monitor their performance. We will be using prefabricated small molecule based OSCs, self fabricated polymer based OSCs, self fabricated PSCs, and prefabricated amorphous silicon solar cells. Each of these is a lightweight, flexible, and thin solar cell ideal for space use. The effect of cosmic ray bombardment on perovskite cells is of particular interest as the crystal morphology may be affected.  
+	Space transport involves high doses of radiation, large fluctuations of temperatures, and extreme vacuum conditions. The need to study the effects of a space like environment on organic electronic devices is paramount as advances in the organic semiconductor field continue and space exploration becomes more standard. In this study, we propose to mount four different types of solar cells onto our payload and monitor their performance. We will be using prefabricated small molecule based OSCs, self fabricated polymer based OSCs, self fabricated PSCs, and prefabricated amorphous silicon solar cells. Each of these is a lightweight, flexible, and thin solar cell ideal for space use. Additionaly, effect to the crystal structure of the perovskite based cell is of particular interest, as cosmic ray bombardments and fluxtuations of temperature can be determental. 
+	
 
 
 %\subsubsection{Solar Radiation}
