--- a/Radiation/DesignRad.tex
+++ b/Radiation/DesignRad.tex
@@ -77,19 +77,14 @@ The MiniPIX's sensor can only interact with charged particles. In order to measu
 By covering half of the sensor, we can compare the uncovered half with the data recorded by the MiniPIX outside of the ISS module.
 
 \subsubsection{Organic Photovoltaic Cells}    
-We will be using four different types of solar cells with three panels per cell type, making a total of 12 arrays on board our payload. There will be one type of cell on each of three sides of the payload, 
+We will be using four different types of solar cells with a total of 12 arrays on board our payload. There will be one type of cell on each of three sides of the payload, leaving one face free for any unique cells we may develop during our research. Half of our panels will be prefabricated and purcahsed from a supplier, and will be regarded as a control against which we will evaluate our in house fabricated cells. For the in house fabrication, we will be focusing on polymer:fullerne BHJ and perovskite active layer cells. We intend to investigate a variety of polymer:fullerene blends and develop a procedue for fabrication which yields the greatest PCE and MPP in the stratospheric environment, and to investigate the possibility of transpatent conductive oxide(TCO) layers besides the traditional indium tin oxide (ITO) glass and polyethylene terephthalate (PET) plastic. 
 
 Solar cells are characterized by their current vs voltage (IV) curve, which tells you the maximum power point (MPP), Vmax and Imax, open-circuit voltage (Voc) and short circuit current (Isc), leading to the fill factor (FF) and efficiency (PCE). This curve will be  generated using a variable resistor in series with two multimeters, one acting as voltmeter and the other an ammeter, and the solar cell in question, which will follow Ohm's law (1) V=IR. From the plot, Voc is seen when I=0, Isc is when V=0, and the MPP is where Vmax and Imax meet. The MPP can then tell us the efficiecy, which is defined as (2) MPP/Pin. The fill factor gives information on the "squarness" of the IV curve and is defined as (3) FF = MPP/VocIsc, and it is optimal to maximize the fill factor.
 
-    Before flight, every cell will be characterized with IV curves and microscopy, then IV curves will be recorded during flight along with temperature monitoring, and finally after recovery, each cell will be re characterized and once again viewed under the microscope to look for any physics defects. 
+    Before flight, every cell will be characterized with IV curves using AM 1.5 G simulated sun light to generate a characteristic profile for the brand new cell, and microscopy will be preformed to understand the topology and interfacial details of the pristine cells. We will also do a full evaluation of the cells to determine the quantum efficiencyWith one of each cell type remaining on ground as a control, we will have each panel onboard the payload wired to an arduino unit then IV curves will be recorded during flight, with a characteristic profile generated every 30 seconds, along with temperature monitoring, and finally after recovery, each cell will be re characterized and once again viewed under the microscope to look for any physics defects. 
     
     With the HASP mission, we are going to compare fabricated organic polymer and perovskite solar cells against store bought amorphous silicon solar cells. Each of these cells will be analyzed before, during, and after exposure to the stratosphere. In analyzing our cells, we will measure the open circuit voltage, the short circuit current, then fill factor,  max power point, maximum conversion efficiency, and quantum efficiency.
     In conjunction with our miniPIX detector, we will be analyzing the effect that cosmic ray bombardment has on our solar cells.  Additionally, we will watch for problems which arise due to UV-A, B, and C rays. We will use AFM after fabrication and after flight to determine effects from cosmics rays
     
 
 
-Our fabricated polymer cells will be a traditional champion cell of Ag: / 3HT / PCBM / ITO / glass and will be fabricated in house using sputter coating and vapor evaporation.
-
-Our fabricated perovskite cell will use a similar set up as the polymer cell but with ITO / PEDOT:PSS / CH3NH3PbI3-xClx / PC70BM / Ca / Al and will also be fabricated in house.
-
-The amorphous silicon cells will also be purchased from a reasonable location with small enough panels.
