--- a/Sections/HASPInterface.tex
+++ b/Sections/HASPInterface.tex
@@ -7,7 +7,7 @@ The SORA 3 payload will not utilize any serial commands. Everything will be conf
 \subsection{Interfacing with HASP: Serial Downlink}
 For the duration of the flight, the serial downlink will be used to downlink the temperature and other various statistics that will be computed directly on the RP\num{3} as data is collected. It will also be used to downlink messages regarding the status of the payload, the command uplink status and error messages. The data packets will be human readable so they can be analyzed as they are received from HASP. The packets will be delimited by keywords \verb|begin_packet| and \verb|end_packet|, and we will use a simple one character header to differentiate between data packets and message packets. The format of the packets is potentially subject to change but the current design is outlined in Listing~\ref{Downlinks}.
 
-Listing~\ref{Downlinks} is a sample of our proposed downlink data packet, values are included to the demonstrate expected number of characters but should not be considered expected or actual values. Included first is a format sample to enhance readability in this application which will not be included in the actual downlink data stream.
+Listing~\ref{Downlinks} is a sample of our proposed downlink data packet format. Included is a format sample to enhance readability in this application which will not be included in the actual downlink data stream.
 
 \lstset{basicstyle=\small, numbers=left, xleftmargin=2em, frame=tb, label = Downlinks, framexleftmargin=1.5em}
 \begin{lstlisting}[caption = Sample of proposed downlink data packets ID: 15667 - 15669]
@@ -15,46 +15,17 @@ Listing~\ref{Downlinks} is a sample of our proposed downlink data packet, values
 begin_packet
 |ID Number|Raspberry Pi Temp|MiniPix 0 Temp|MiniPix 1 Temp|ISS Temp|ISS Pressure
 |Accelerometer val x|Acc val y|Acc val z
-|Solar Cell Index 00:Temp,FF,Efficiency|Solar Cell Index 01:Temp,FF,Efficiency
+|Solar Cell Index 00:Temp,Voltage,Current|Solar Cell Index 01:Temp,Voltage,Current
 ...
-|Solar Cell Index 10:Temp,FF,Efficiency|Solar Cell Index 11:Temp,FF,Efficiency
+|Solar Cell Index 10:Temp,Voltage,Current|Solar Cell Index 11:Temp,Voltage,Current
 |Timestamp|Date|
 end_packet
 <End Format Sample>
-...
-begin_packet
-|15667|55.2|40.5|44.5|25.0|101.35
-|1.00|-1.00|0.00
-|C00:30.50,0.50,0.15|C01:30.50,0.50,0.15|C02:30.50,0.50,0.15|C03:30.50,0.50,0.15
-|C04:30.50,0.50,0.15|C05:30.50,0.50,0.15|C06:30.50,0.50,0.15|C07:30.50,0.50,0.15
-|C08:30.50,0.50,0.15|C09:30.50,0.50,0.15|C10:30.50,0.50,0.15|C11:30.50,0.50,0.15
-|9:29:39|9/4/18|
-end_packet
-begin_packet
-|15668|55.2|40.5|44.5|25.0|101.35
-|1.00|-1.00|0.00
-|C00:30.50,0.50,0.15|C01:30.50,0.50,0.15|C02:30.50,0.50,0.15|C03:30.50,0.50,0.15
-|C04:30.50,0.50,0.15|C05:30.50,0.50,0.15|C06:30.50,0.50,0.15|C07:30.50,0.50,0.15
-|C08:30.50,0.50,0.15|C09:30.50,0.50,0.15|C10:30.50,0.50,0.15|C11:30.50,0.50,0.15
-|9:29:42|9/4/18|
-end_packet
-begin_packet
-|15669|55.2|40.5|44.5|25.0|101.35
-|1.00|-1.00|0.00
-|C00:30.50,0.50,0.15|C01:30.50,0.50,0.15|C02:30.50,0.50,0.15|C03:30.50,0.50,0.15
-|C04:30.50,0.50,0.15|C05:30.50,0.50,0.15|C06:30.50,0.50,0.15|C07:30.50,0.50,0.15
-|C08:30.50,0.50,0.15|C09:30.50,0.50,0.15|C10:30.50,0.50,0.15|C11:30.50,0.50,0.15
-|9:29:45|9/4/18|
-end_packet
-...
 \end{lstlisting}
 \medskip
 
-The first integer represents the ID of the packet. Following the packet ID are temperature readings of the Raspberry Pi and both MiniPix, temperature and pressure within the ISS Module, astrobiology collection arm accelerometer $x, y, z$ values. Then follows the set of values for each of the twelve solar cells, which include the index, temperature, fill factor and efficiency of the cell. Included before the closing delimiter is the timestamp in $HH$:$MM$:$SS$ $MM$/$DD$/$YY$ at which the packet was written.  
+The first integer represents the ID of the packet. Following the packet ID are temperature readings of the Raspberry Pi and both MiniPix, temperature and pressure within the ISS Module, astrobiology collection arm accelerometer $x, y, z$ values. Then follows the set of values for each of the twelve solar cells, which include the index, temperature, voltage and current of the cell. Included before the closing delimiter is the timestamp in $HH$:$MM$:$SS$ $MM$/$DD$/$YY$ at which the packet was written.  
 During our previous flights, these data packets were crucial status updates to the state of our payload. We will once again use them for the same purpose to keep a close eye on our payload.
-
-This year the data packets will contain information about the readings from temperatures on crucial devices such as the RP3 and MiniPIX sensors, as well as temperature and pressure inside the ISS module, and accelerometer $x, y, z$ values of the sample collection arm. Additionally packets will contain values regarding the temperature, fill factor, and efficiency of each of the solar cells.  
-
 
 \subsection{Interfacing with HASP: EDAC and DB9 Connections}
 
