Updated Procedures and Intro
Added detail about procedures

--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -7,7 +7,7 @@ The methodology of the first two missions has provided a proof of concept for ha
 This will serve as the platform for the 2019 mission.
 
 The main objectives of the 2019 mission is to study the exposure to ionizing radiation that organisms face in the upper atmosphere and sample these organisms and bring them to the surface.
-The organisms in question are microbial extremophiles that naturally reside in this region of the atmosphere.
+The organisms in question are microbial extremophiles that naturally reside in this region of the atmosphere. 
 However, we are also interested in the humans that reside in such harsh environments.
 We will construct a thermally-controlled, pressurized mock-up International Space Station (ISS) module containing a scintillated MiniPIX.
 This allows us to study the particle cascades induced by the materials of the module, which will give information regarding the dose that astronauts are exposed to while in space.
@@ -51,14 +51,15 @@ We will then bring the uncontaminated, collected samples down to the surface for
 \begin{enumerate}
 \item By comparing our flight sample to previous missions \cite{SORA1}\cite{SORA2}, the newly developed passive astrobiology system can be quantitively and qualitatively be compated to previous methods.
   \begin{enumerate}
-  \item Objective: Sample a comparatively larger volume of air while at float altitude.
-  \item Objective: <<JIMISH: EXPAND ON THIS?>>
+  \item Objective: Sample a comparatively larger volume of air using passive design elements rather than an active pump design at float altitude.
+  \item Objective: Compare the effectiveness in rotation of the sampling filters to those that are stationary.
   \end{enumerate}
-\item <<JIMISH: IDENTIFY HOW THE DECONTAMINATION PROCESS CAN BE IMPROVED>>
+\item Background sampling and rigorous sterilization procedures will help rule out contamination as a possible source of error.
   \begin{enumerate}
   \item Minimize outside contamination of the entire astrobiology system.
   \item Objective: Retain a sterile environment for the entirety of the balloon flight.
   \item Objective: Sample a minimum volumetric amount of air at target altitude for the duration of the float phase (approximately 15 to 18 hours).
+  \item Objective: Take background samples using Fluropore Membrane filters at the various locations where the payload will be.
   \end{enumerate}
 \item The radiation environment within the ISS module will be noticeably different than that outside the module in terms of particle type and concentration. 
   \begin{enumerate}
