--- a/Radiation/DesignRad.tex
+++ b/Radiation/DesignRad.tex
@@ -81,10 +81,10 @@ We will be using four different types of solar cells with a total of 12 arrays o
 
 Solar cells are characterized by their current vs voltage (IV) curve, which tells you the maximum power point (MPP), Vmax and Imax, open-circuit voltage (Voc) and short circuit current (Isc), leading to the fill factor (FF) and efficiency (PCE). This curve will be  generated using a variable resistor in series with two multimeters, one acting as voltmeter and the other an ammeter, and the solar cell in question, which will follow Ohm's law (1) V=IR. From the plot, Voc is seen when I=0, Isc is when V=0, and the MPP is where Vmax and Imax meet. The MPP can then tell us the efficiecy, which is defined as (2) MPP/Pin. The fill factor gives information on the "squarness" of the IV curve and is defined as (3) FF = MPP/VocIsc, and it is optimal to maximize the fill factor.
 
-    Before flight, every cell will be characterized with IV curves using AM 1.5 G simulated sun light to generate a characteristic profile for the brand new cell, and microscopy will be preformed to understand the topology and interfacial details of the pristine cells. We will also do a full evaluation of the cells to determine the quantum efficiencyWith one of each cell type remaining on ground as a control, we will have each panel onboard the payload wired to an arduino unit then IV curves will be recorded during flight, with a characteristic profile generated every 30 seconds, along with temperature monitoring, and finally after recovery, each cell will be re characterized and once again viewed under the microscope to look for any physics defects. 
+    Before flight, every cell will be characterized with IV curves using AMG 1.5 simulated sun light to generate a characteristic profile for the each new cell, and microscopy will be preformed to understand the topology and interfacial details of the new cells. Currently our plan is to have one of each cell type remaining on ground as a control, and we will have each panel onboard the payload wired to an arduino unit where IV curves will be recorded during flight, with a characteristic profile generated every 30 seconds. This data will be stored on the arduino with backup stored to a raspberry pi. On  board our payload we will be measuring the tempreature and pressure of the environment to deteremaine any effects on the preformance due to temperature and pressure changes. Finally after recovery, the IV data will be extracted from the arduino/raspberry pi and plotted, and each cell will be re characterized and once again viewed under the microscope to look for any physical defects. 
     
-    With the HASP mission, we are going to compare fabricated organic polymer and perovskite solar cells against store bought amorphous silicon solar cells. Each of these cells will be analyzed before, during, and after exposure to the stratosphere. In analyzing our cells, we will measure the open circuit voltage, the short circuit current, then fill factor,  max power point, maximum conversion efficiency, and quantum efficiency.
-    In conjunction with our miniPIX detector, we will be analyzing the effect that cosmic ray bombardment has on our solar cells.  Additionally, we will watch for problems which arise due to UV-A, B, and C rays. We will use AFM after fabrication and after flight to determine effects from cosmics rays
+    With the HASP mission, we are going to compare fabricated organic polymer and perovskite solar cells against purchased prefabricated organic solar cells. Each of these cells will be analyzed before, during, and after exposure to the stratosphere. In analyzing our cells, we will measure the open circuit voltage, short circuit current, and maiximum power point, then fill factor will be determined along with efficieny.
+    In conjunction with our MiniPIX detector, we will be analyzing the effect that cosmic ray bombardment has on our solar cells. By analyzing the times at which cosmic rays are recorded, we can look at our IV data and determine if there was any effect on the cells preformance. Additionally, we will watch for problems which arise due to UV-A, B, and C rays with photodiodes. These photodiodes will serve the additional purpose of monitoring the solar power spectrum that our cells are exposed to.
     
 
 
