--- a/Electronics/SOCRATESDesign.tex
+++ b/Electronics/SOCRATESDesign.tex
@@ -9,7 +9,7 @@ In order to maintain data integrity we will save the data recorded by SOCRATES t
 
 \subsubsection{The Sensors}
 
-Our payload will utilize 14 thermistors to measure temperature at various points in our payload. The decision to use thermistors was based primarily on the performance of the analog temperature sensors during our 2017 flight, during which several of those sensors had slight malfunctions, and the success of thermistors in our 2018 flight. Thermistors are able to accurately measure temperature in the range \SIrange{-55}{125}{\celsius} and should therefore be adequate for the conditions in the stratosphere. Pressure will be recorded from two digital pressure sensors, one low pressure sensor in the main payload structure which will record pressure in the \SIrange{0}{3.44}{\kilo\pascal} range, and the second pressure sensor will be located inside the ISS module and record pressure in the \SIrange{20}{110}{\kilo\pascal} range. All sensor data will be UTC timestamped via the onboard real time clock and recorded to the SD card on the Arduino and USB drive attached to the RP3. To confirm the activated status of the astrobiology collection system, an accelerometer will be used to detect whether the collection arm is spinning or parked as is appropriate for the altitude of the payload. Each solar cell will also be monitored for temperature to aid in the calculation of efficiency of each cell. One MiniPIX will be located inside the ISS module and an additional MiniPIX will be located inside the main structure of the payload.
+Our payload will utilize 14 thermistors to measure temperature at various points in our payload. The decision to use thermistors was based primarily on the performance of the analog temperature sensors during our 2017 flight, during which several of those sensors had slight malfunctions, and the success of thermistors in our 2018 flight. Thermistors are able to accurately measure temperature in the range \SIrange{-55}{125}{\celsius} and should therefore be adequate for the conditions in the stratosphere. Pressure will be recorded from two digital pressure sensors, one low pressure sensor in the main payload structure which will record pressure in the \SIrange{0}{3.44}{\kilo\pascal} range, and the second pressure sensor will be located inside the ISS module and record pressure in the \SIrange{20}{110}{\kilo\pascal} range. All sensor data will be UTC timestamped via the onboard real time clock and recorded to the SD card on the Arduino and USB drive attached to the RP3. To confirm the activated status of the astrobiology collection system, an accelerometer will be used to detect whether the collection arm is spinning or parked as is appropriate for the altitude of the payload. Each solar cell will also be monitored for temperature to aid in the calculation of efficiency of each cell in addition to being monitored for voltage directly through the analog ports of the arduino. Current of each solar cell will also be measured using a shunt resistor and IV curve and fill factor will be calculated after the payload has landed from the values that were collected for voltage and current of each cell. In order to accomodate all analog pins required to measure temperature, current, voltage and pressure, several analog multiplexes will be wired together in series for the arduino. One MiniPIX will be located inside the ISS module and an additional MiniPIX will be located inside the main structure of the payload.
 
 \begin{table}[h!]
 \centering
