--- a/Bib.tex
+++ b/Bib.tex
@@ -63,6 +63,10 @@ Urbar, J., Scheirich, J., Jakubek, J., 2011. Medipix/Timepix cosmic ray tracking
   
 \bibitem{StuartThesis} 22
   George, S., \textit{Dosimetric Applications of Hybrid Pixel Detectors}, University of Wollongong, Australia, 2015.
+  
+  \bibitem{OPV operation}
+  DOI: 10.1038/nmat3807 
+
 
 %\bibitem{uv_irradiance}
 %  Calculating the UV Index. (2016, October 14). Retrieved June 03, 2017, from \url{https://www.epa.gov/sunsafety/calculating-uv-index-0}.
