--- a/Bib.tex
+++ b/Bib.tex
@@ -66,6 +66,16 @@ Urbar, J., Scheirich, J., Jakubek, J., 2011. Medipix/Timepix cosmic ray tracking
   
   \bibitem{OPV operation}
   DOI: 10.1038/nmat3807 
+  
+  \bibitem{OSCAR}
+  Solar Energy Materials and Solar Cells 182 (2018) 121–127
+DOI: 10.1016/j.solmat.2018.03.024
+
+\bibitem{NASAorganics}
+\url{https://ntrs.nasa.gov/search.jsp?R=20030016569}
+
+\bibitem{Space organic cells}
+Sheila Bailey and Ryne Raffaelle, Space Solar Cells and Arrays
 
 
 %\bibitem{uv_irradiance}
