--- a/Radiation/IntroRad.tex
+++ b/Radiation/IntroRad.tex
@@ -20,8 +20,8 @@ Additionaly, the measurements outside of the structure will give information as 
 \subsubsection{Organic Solar Cells}
 
 	\subsection{Introduction}
-	Photovoltaic devices has been a staple in space energy harvesting since the launch of Vangaurd 1 in 1958. Since then, silicon, gallium arsenide, indium phosphide, cadmium telluride, and other III-IV systems have played the key roles[]. When choosing a system to gather solar energy, the only economic factors are the initial cost of the arrays, and the cost of transporting the system to orbit. To reduce this cost, we want solar cells with the highest specific power, which is defined as the W/kg. Recent studies have shown organic solar cells (OSC) with a specific powers of 10 W/g, which is why OSCs are an active area of research for space energy generation[1]. Organic solar cells are thin film, light weight, flexible, and can be produced using roll to roll printing, making it ideal for space applications. In this experiment, we are exploring the effects of stratospheric conditions on organic solar cells, with a particular focus on the effects of cosmic ray bombardment in conjunction with the miniPIX system, as well as to investigate the radiation hardness of different types of organic solar cells and demonstrate their reliability upon entry and exit of the stratosphere. In the following sections we will explain the basic workings of an OSC and explain some of the benifits and hinderences of a space like environment on the OSC, then explain the methodology of our experiment.
-	
+	Photovoltaic devices has been a staple in space energy harvesting since the launch of Vangaurd 1 in 1958. Since then, silicon, gallium arsenide, indium phosphide, cadmium telluride, and other III-IV systems have played the key roles. When choosing a system to gather solar energy, the only economic factors are the initial cost of the arrays, and the cost of transporting the system to orbit. To reduce this cost, we want solar cells with the highest specific power, which is defined as the W/kg. Recent studies have shown organic solar cells (OSC) with a specific powers of 10 W/g, which is why OSCs are an active area of research for space energy generation. Organic solar cells are thin film, light weight, flexible, and can be produced using roll to roll printing, making it ideal for space applications. In this experiment, we are exploring the effects of stratospheric conditions on organic solar cells, with a particular focus on the effects of cosmic ray bombardment in conjunction with the MiniPIX system, as well as to investigate the radiation hardness of different types of organic solar cells and demonstrate their reliability upon entry and exit of the stratosphere. In the following sections we will explain the basic workings of an OSC and explain some of the benifits and hinderences of a space like environment on the OSC, then explain the methodology of our experiment.
+	\cite{Space organics}
 	\subsection{Working principals}
 
 	
