--- a/Sections/Management.tex
+++ b/Sections/Management.tex
@@ -113,13 +113,13 @@
 \begin{tabular}{|c|l|}
 \hline
 \textbf{Month of 2019} & \multicolumn{1}{c|}{\textbf{Description of Work}} \\ \hline
-\textbf{January} & \begin{tabular}[c]{@{}l@{}} * Secure funding \\ * Create and finish budget for mission \\ * Make inventory of hardware \\ * Procure hardware/software \\ * Start designs of SORA 3 \\ * Update SOCRATES \\ * Upgrade vacuum chamber \\ * Recruit new members \end{tabular} \\ \hline
+\textbf{January} & \begin{tabular}[c]{@{}l@{}} * Secure funding \\ * Create and finish budget for mission \\ * Make inventory of hardware \\ * Procure hardware/software \\ * Start designs of SORA 3 \\ * Update SOCRATES \\  *Determine cell types \\ * Upgrade vacuum chamber \\ * Recruit new members \end{tabular} \\ \hline
 \textbf{February} & \begin{tabular}[c]{@{}l@{}}
 * Continue with work from January in terms of design development and funding procurement.  \\ * Have finished list of inventory\\ * Continue recruitment if necessary and finalize by end of month.\\\end{tabular} \\ \hline
-\textbf{March} & \begin{tabular}[c]{@{}l@{}}Obtain funding by the end of this month.  Finish all tasks from the previous two months and transition into building phase.\\ * Have all hardware/software orders in by the end of the month\\ * Begin PSIP, have draft by end of the month\end{tabular} \\ \hline
-\textbf{April} & \begin{tabular}[c]{@{}l@{}}* Order remaining items if needed\\ * Submit a NASA On-site Security Clearance Document by April 15th.\\ * Finish PSIP by April 26th\\ * SOCRATES and MiniPIX integration and testing\\ * Prepare for astrobiology work\end{tabular} \\ \hline
-\textbf{May} & \begin{tabular}[c]{@{}l@{}}* PSIP and FLOP development\\ * Finalize integration of SOCRATES and hardware\\ * Continue working on astrobiology upgrades\end{tabular} \\ \hline
-\textbf{June} & \begin{tabular}[c]{@{}l@{}}Final PSIP due June 28th\\ *Finalize astrobiology upgrades and ready for integration\\ * Testing in lab\end{tabular} \\ \hline
+\textbf{March} & \begin{tabular}[c]{@{}l@{}}Obtain funding by the end of this month.  Finish all tasks from the previous two months and transition into building phase.\\ * Have all hardware/software orders in by the end of the month\\ * Begin fabrication of polymer and perovskite based solar cells\\ * Begin PSIP, have draft by end of the month\end{tabular} \\ \hline
+\textbf{April} & \begin{tabular}[c]{@{}l@{}}* Order remaining items if needed\\ * Submit a NASA On-site Security Clearance Document by April 15th.\\ * Finish PSIP by April 26th\\ * SOCRATES and MiniPIX integration and testing\\ *In house solar cell fabrication continued \\ * Prepare for astrobiology work\end{tabular} \\ \hline
+\textbf{May} & \begin{tabular}[c]{@{}l@{}}* PSIP and FLOP development\\ * Finalize integration of SOCRATES and hardware\\ * Finalized fabrication of cells and begin profiling \\ * Continue working on astrobiology upgrades\end{tabular} \\ \hline
+\textbf{June} & \begin{tabular}[c]{@{}l@{}}Final PSIP due June 28th\\ *Finalize astrobiology and cell upgrades and ready for integration\\ * Testing in lab\end{tabular} \\ \hline
 \textbf{July} & \begin{tabular}[c]{@{}l@{}}Final FLOP due July 19th\\ * Make changes from testing and continue tests\end{tabular} \\ \hline
 \textbf{August} & \begin{tabular}[c]{@{}l@{}}Payload Integration during July 15th - July 19th\\ *Have all payload work done and ready for flight\end{tabular} \\ \hline
 \textbf{September} & \begin{tabular}[c]{@{}l@{}}* Launch SORA 3 on September 2nd\\ * Recovery TBD. \end{tabular} \\ \hline
