Fixed Figure in AstroDesign
Added the correct figure

--- a/Astrobiology/DesignAstro.tex
+++ b/Astrobiology/DesignAstro.tex
@@ -6,9 +6,9 @@ The collection assembly will be designed as a one mechanized enclosure as shown 
 
 \begin{figure}[!h] 
 	\begin{center}
-		\includegraphics[scale=.8]{}
-		\caption{{\bf Left:} Cross-section view of the clean box with experimental and control containers. {\bf Right:} KNF N84-4 commercial gas-sampling diaphragm vacuum pump. }
-		\label{fig:Pump}
+		\includegraphics[width=\linewidth]{Figures/T-Arm.jpg}
+		\caption{Cross-section view of the clean box with the extended rotating arm. \bf All numbers are in millimeters}
+		\label{fig:AstroBox}
 	\end{center}
 \end{figure} 
 %\subsection{Astrobiology Methods}
